--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "express": "3.x",
         "jade": "0.35.x",
+        "mongoose": "3.6.x",
         "socket.io": "0.9.x"
     },
     "scripts": {
