--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "express": "3.x",
         "jade": "0.35.x",
         "mongoose": "3.6.x",
+        "connect-mongo": "latest",
         "socket.io": "0.9.x"
     },
     "scripts": {
