--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
     "version": "0.0.1",
     "private": true,
     "dependencies": {
+        "connect-mongo": "latest",
         "express": "3.x",
+        "formidable": "latest",
         "jade": "0.35.x",
         "mongoose": "3.6.x",
-        "connect-mongo": "latest",
         "socket.io": "0.9.x"
     },
     "scripts": {
