--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
     "version": "0.0.1",
     "private": true,
     "dependencies": {
+        "connect-flash": "latest",
         "connect-mongo": "latest",
         "express": "3.x",
         "formidable": "latest",
+        "imagemagick": "latest",
         "jade": "0.35.x",
         "mongoose": "3.6.x",
         "socket.io": "0.9.x"
