Add mkdirp module to package.json

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "formidable": "latest",
         "imagemagick": "latest",
         "jade": "0.35.x",
+        "mkdirp": "latest",
         "mongoose": "3.6.x",
         "socket.io": "0.9.x"
     },
