Implement templates listing page with searching, paging abilities

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "imagemagick": "latest",
         "jade": "0.35.x",
         "mkdirp": "latest",
+        "moment": "latest",
         "mongoose": "3.6.x",
         "socket.io": "0.9.x"
     },
