--- a/src/package.json
+++ b/src/package.json
@@ -3,19 +3,20 @@
     "version": "1.1.2",
     "private": true,
     "dependencies": {
-        "connect-flash": "latest",
-        "connect-mongo": "latest",
-        "express": "3.x",
-        "filesize": "2.x",
-        "formidable": "latest",
+        "connect-flash": "0.1.1",
+        "connect-mongo": "0.3.3",
+        "express": "3.4.4",
+        "filesize": "2.0.0",
+        "formidable": "1.0.14",
         "hiredis": "0.1.15",
-        "imagemagick": "latest",
-        "jade": "0.35.x",
-        "mkdirp": "latest",
-        "moment": "latest",
-        "mongoose": "3.6.x",
+        "imagemagick": "0.1.3",
+        "jade": "0.35.0",
+        "marked": "0.3.0",
+        "mkdirp": "0.3.5",
+        "moment": "2.5.0",
+        "mongoose": "3.8.3",
         "redis": "0.9.1",
-        "socket.io": "0.9.x"
+        "socket.io": "0.9.16"
     },
     "scripts": {
         "start": "app.js"
